fixed stuff too dark

--- a/required/fixes.css
+++ b/required/fixes.css
@@ -27,16 +27,20 @@
 	background-color: rgba(0, 0, 0, 0) !important;
 }
 
+.buttons-uaqb-5{
+	background-color: rgba(0, 0, 0, 0.4) !important;
+}
+
 .channelAttachmentArea-HwpkuQ {
 	margin-bottom: -25px !important;
 }
 
 .children-3xh0VB {
-	background-color: rgba(0, 0, 0, 0.6) !important;
+	background-color: rgba(0, 0, 0, 0.4) !important;
 }
 
 .toolbar-3_r2xA {
-	background-color: rgba(0, 0, 0, 0.6) !important;
+	background-color: rgba(0, 0, 0, 0.4) !important;
 }
 
 .typing-2J1mQU {
